kodekloud-eks/values/jenkins/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jenkins-depl
  name: jenkins-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-depl
  template:
    metadata:
      labels:
        app: jenkins-depl
    spec:
      containers:
        - image: jenkins/jenkins:latest
          name: jenkins-container
