kodekloud-eks/values/jenkins/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-svc
spec:
  type: ClusterIP
  selector:
    app: jenkins-svc
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
